demo-deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec:
     containers:
      -  image: nginx
         imagePullPolicy: IfNotPresent
         name: nginx-web-server
         ports:
         - containerPort: 80
