demo-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: envoy-gateway
spec:
  gatewayClassName: envoy-gateway #Which GatewayClass handling this gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80 #Port 80 is the internal port to the client side from the service
